Fixing makefile (had local paths hardcoded)

--- a/powermeter/Makefile
+++ b/powermeter/Makefile
@@ -1,6 +1,6 @@
 BOARD ?= nrf51_pca10028
 CONF_FILE ?= prj.conf
 QEMU_EXTRA_FLAGS = -serial unix:/tmp/bt-server-bredr
-ZEPHYR_BASE = /disk2/devel/powermeter/zephyr
+ZEPHYR_BASE = $(shell pwd)/../zephyr
 
 include $(ZEPHYR_BASE)/Makefile.inc
